# x6100_gui

./: .clang-format  .gitignore  CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  run_tests.sh
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
.github/workflows/: main.yml
buildroot/: README.md  build.sh  conf.sh
lv_drivers/: CMakeLists.txt
lv_drivers/display/: fbdev.c
lv_drivers/indev/: evdev.c  xkb.c
rootfs/etc/init.d/: S95gui  S99gui
rootfs/usr/sbin/: x6100_daemon
sql/: CMakeLists.txt  bands_transverter.csv  digital_modes.csv  memory.csv  params.csv  params.sql
src/: CMakeLists.txt  adif.c  adif.h  audio.c  audio.h  backlight.c  backlight.h  band_info.c  band_info.h  bands.c  bands.h  buttons.c  buttons.cpp  buttons.h  cat.c  cat.cpp  cat.h  clock.c  clock.h  controls.cpp  controls.h  cw.c  cw.cpp  cw.h  cw_decoder.c  cw_encoder.c  cw_tune_ui.c  cw_tune_ui.h  dialog.c  dialog.h  dialog_callsign.c  dialog_freq.c  dialog_ft8.c  dialog_gps.c  dialog_gps.h  dialog_msg_cw.c  dialog_msg_cw.h  dialog_msg_voice.c  dialog_msg_voice.h  dialog_qth.c  (+85 more)
src/cfg/: CMakeLists.txt  atu.c  atu.h  atu.private.h  band.c  band.h  band.private.h  cfg.c  cfg.h  cfg.private.h  common.h  debug.c  digital_modes.c  digital_modes.h  digital_modes.private.h  memory.c  memory.h  memory.private.h  mode.c  mode.h  mode.private.h  params.c  params.private.h  subjects.c  subjects.cpp  subjects.h  subjects.private.h  test_cfg.c  transverter.c  transverter.h  transverter.private.h
src/fonts/: CMakeLists.txt  sony_20.c  sony_24.c  sony_30.c
src/ft8/: CMakeLists.txt  decode.h  gfsk.c  gfsk.h  pack.c  qso.cpp  qso.h  tools.c  tools.h  utils.c  utils.h  worker.c  worker.h
src/params/: CMakeLists.txt  band.c  band.h  common.c  common.h  db.c  db.h  migrations.c  migrations.h  modulation.c  modulation.h  params.c  params.h  types.h
src/qth/: CMakeLists.txt  qth.c  qth.h
src/widgets/: lv_finder.c  lv_finder.h  lv_waterfall.c  lv_waterfall.h
styles/: styles_custom.txt  styles_custom_palette.toml  styles_custom_palette.txt  styles_simple.toml  styles_simple.txt  toml2txt.py
tests/: CMakeLists.txt  test_ft8_qso.cpp  test_qth.cpp
